--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
   },
   "dependencies": {
     "@mui/material": "^6.1.5",
+    "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "express-validator": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.2",
     "nodemon": "^3.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.27.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@emotion/react": "^11.13.3",
