--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@mui/material": "^6.1.5",
+    "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
@@ -23,8 +24,10 @@
     "nodemon": "^3.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
+    "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
