--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "node": "nodemon index.js"
   },
   "dependencies": {
+    "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
     "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
