--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+.env
 
 node_modules
 dist
@@ -26,3 +27,4 @@ dist-ssr
 
 *.tsbuildinfo
 .env
+lessons.tsx
