--- a/package.json
+++ b/package.json
@@ -21,12 +21,17 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
+    "framer-motion": "^11.11.11",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.460.0",
     "mongoose": "^8.7.2",
+    "motion": "^11.11.17",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "redux-persist": "^6.0.0"
@@ -48,6 +53,7 @@
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.14",
+    "tailwindcss-textshadow": "^2.1.3",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
