--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-validator": "^7.2.0",
     "framer-motion": "^11.11.11",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.460.0",
     "mongoose": "^8.7.2",
     "motion": "^11.11.17",
