--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "node": "nodemon index.js"
+    
   },
   "dependencies": {
     "@mui/icons-material": "^6.1.5",
@@ -29,6 +30,7 @@
     "mongoose": "^8.7.2",
     "motion": "^11.11.17",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
