--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "node": "nodemon index.js"
-    
   },
   "dependencies": {
     "@mui/icons-material": "^6.1.5",
@@ -34,11 +33,13 @@
     "nodemon": "^3.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.27.0",
-    "redux-persist": "^6.0.0"
+    "react-router-dom": "^6.28.1",
+    "redux-persist": "^6.0.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@emotion/react": "^11.13.3",
