--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.1",
+    "react-toastify": "^11.0.2",
     "redux-persist": "^6.0.0",
     "ws": "^8.18.0"
   },
