--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "motion": "^11.11.17",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
