--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "deploy-fe": "scp -r ./dist/* vps:/var/www/market-nest",
+    "deploy-be": "scp -r ./server vps:~/market-nest && scp ./package.json vps:~/market-nest && scp ./index.js vps:~/market-nest && scp ./.env vps:~/market-nest",
     "lint": "eslint .",
     "preview": "vite preview",
     "node": "nodemon index.js"
