--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
@@ -31,6 +32,7 @@
     "mongoose": "^8.7.2",
     "motion": "^11.11.17",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
@@ -43,6 +45,7 @@
     "react-router-dom": "^6.28.1",
     "react-toastify": "^11.0.2",
     "redux-persist": "^6.0.0",
+    "streamifier": "^0.1.1",
     "ws": "^8.18.0"
   },
   "devDependencies": {
