--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "deploy-fe": "set -e && rm -rf dist && echo -e \"\\033[1;31mDeleting dist...\\033[0m\" && echo -e \"\\033[1;34mBuilding...\\033[0m\" && npm run build || true && echo -e \"\\033[1;32mDeploying...\\033[0m\" && scp -r ./dist vps:/var/www/market-frontend && echo -e \"\\033[1;33mRestarting Nginx...\\033[0m\" && ssh vps 'sudo systemctl restart nginx' && echo -e \"\\033[1;32mSuccess!\\033[0m\"",
-    "deploy-be": "echo -e \"\\033[1;34mDeploying backend...\\033[0m\" && scp -r ./server vps:~/market-nest && scp ./package.json vps:~/market-nest && scp -r ./public vps:~/market-nest && scp ./index.js vps:~/market-nest && scp ./.env vps:~/market-nest && echo -e \"\\033[1;32mBackend deployment completed!\\033[0m\"",
+    "deploy-be": "echo -e \"\\033[1;34mDeploying backend...\\033[0m\" && scp -r ./server vps:~/market-nest && scp ./package.json vps:~/market-nest && scp ./index.js vps:~/market-nest && scp ./.env vps:~/market-nest && echo -e \"\\033[1;32mBackend deployment completed!\\033[0m\"",
     "lint": "eslint .",
     "preview": "vite preview",
     "node": "nodemon index.js"
@@ -17,6 +17,7 @@
     "@mui/material": "^6.1.5",
     "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.3.0",
+    "@types/leaflet": "^1.9.3",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.3",
@@ -28,6 +29,8 @@
     "framer-motion": "^11.11.11",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.460.0",
     "mongoose": "^8.7.2",
     "motion": "^11.11.17",
@@ -41,6 +44,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.1",
     "react-toastify": "^11.0.2",
@@ -52,20 +56,20 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@eslint/js": "^9.9.0",
+    "@tailwindcss/vite": "^4.0.12",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^22.10.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^4.0.12",
     "tailwindcss-textshadow": "^2.1.3",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
