--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-router-dom": "^6.28.1",
     "react-toastify": "^11.0.2",
     "redux-persist": "^6.0.0",
+    "redux-saga": "^1.3.0",
     "streamifier": "^0.1.1",
     "ws": "^8.18.0"
   },
