add redux-saga to auth

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,5 +16,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "index.js", "axios.js"]
+  "include": ["src"]
 }
