--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "deploy-fe": "set -e && rm -rf dist && echo -e \"\\033[1;31mDeleting dist...\\033[0m\" && echo -e \"\\033[1;34mBuilding...\\033[0m\" && npm run build || true && echo -e \"\\033[1;32mDeploying...\\033[0m\" && scp -r ./dist vps:/var/www/market-frontend && echo -e \"\\033[1;33mRestarting Nginx...\\033[0m\" && ssh vps 'sudo systemctl restart nginx' && echo -e \"\\033[1;32mSuccess!\\033[0m\"",
-    "deploy-be": "echo -e \"\\033[1;34mDeploying backend...\\033[0m\" && scp -r ./server vps:~/market-nest && scp ./package.json vps:~/market-nest && scp ./index.js vps:~/market-nest && scp ./.env vps:~/market-nest && echo -e \"\\033[1;32mBackend deployment completed!\\033[0m\"",
+    "dev": "vite --mode development",
+    "build": "tsc -b && vite build --mode production",
+    "deploy-fe": "set -e && rm -rf dist && echo -e \"\\033[1;31mDeleting dist...\\033[0m\" && echo -e \"\\033[1;34mBuilding...\\033[0m\" && npm run build && echo -e \"\\033[1;32mDeploying...\\033[0m\" && scp -r ./dist vps:/var/www/market-frontend && echo -e \"\\033[1;33mRestarting Nginx...\\033[0m\" && ssh vps 'sudo systemctl restart nginx' && echo -e \"\\033[1;32mSuccess!\\033[0m\"",
+    "deploy-be": "echo -e \"\\033[1;34mDeploying backend...\\033[0m\" && scp -r ./server vps:~/market-nest && scp ./package.json vps:~/market-nest && scp ./index.js vps:~/market-nest && scp ./.env.production vps:~/market-nest/.env && echo -e \"\\033[1;32mBackend deployment completed!\\033[0m\"",
+    "deploy-all": "npm run deploy-fe && npm run deploy-be",
     "lint": "eslint .",
-    "preview": "vite preview",
+    "preview": "vite preview --mode production",
     "node": "nodemon index.js"
   },
   "dependencies": {
@@ -51,6 +52,7 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
     "streamifier": "^0.1.1",
+    "use-debounce": "^10.0.4",
     "ws": "^8.18.0"
   },
   "devDependencies": {
