--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
   "dependencies": {
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
-    "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.3.0",
-    "@types/leaflet": "^1.9.3",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
@@ -29,7 +28,6 @@
     "express-validator": "^7.2.0",
     "framer-motion": "^11.11.11",
     "jsonwebtoken": "^9.0.2",
-    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.460.0",
@@ -51,7 +49,6 @@
     "react-toastify": "^11.0.2",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
-    "streamifier": "^0.1.1",
     "use-debounce": "^10.0.4",
     "ws": "^8.18.0"
   },
@@ -60,6 +57,7 @@
     "@emotion/styled": "^11.13.0",
     "@eslint/js": "^9.9.0",
     "@tailwindcss/vite": "^4.0.12",
+    "@types/leaflet": "^1.9.17",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^22.10.7",
     "@types/react": "^18.3.3",
