--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "node": "nodemon index.js"
   },
   "dependencies": {
-    "@mui/icons-material": "^6.1.5",
-    "@mui/material": "^6.1.5",
+    "@headlessui/react": "^2.2.1",
+    "@mui/icons-material": "^6.4.11",
+    "@mui/material": "^6.4.11",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.3",
+    "clsx": "^2.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
@@ -43,6 +45,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.1",
@@ -60,7 +63,7 @@
     "@types/leaflet": "^1.9.17",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^22.10.7",
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.13.0",
